Multi-language fix

--- a/link_prediction/models/link_prediction.ipynb
+++ b/link_prediction/models/link_prediction.ipynb
@@ -135,7 +135,7 @@
     "    \n",
     "    # Corpus Info\n",
     "    'corpus_path': str(Path(DATA_PATH, 'projection', INFO_TAG)),\n",
-    "    'glove_path': str(Path(EXPORT_PATH, 'glove.npz')),\n",
+    "    'glove_path': str(Path(EXPORT_PATH, f'glove_{LANGUAGE}.npz')),\n",
     "    'export_path': str(EXPORT_PATH),\n",
     "    'data_path': str(DATA_PATH),\n",
     "    'glove_raw_path': str(Path(GLOVE_PATH)),\n",
@@ -154,7 +154,7 @@
     "    'processed_data_path': str(Path(PROCESSED_DATADIR)), # Directory to save the processed data\n",
     "}\n",
     "\n",
-    "MODEL_NAME = \"model\" + (\"_attention\" if params['with_attention'] else \"\") \\\n",
+    "MODEL_NAME = LANGUAGE + \"_model\" + (\"_attention\" if params['with_attention'] else \"\") \\\n",
     "                     + (\"_multihead\" if params['with_multi_head_attention'] else \"\") \\\n",
     "                     + f\"_{params['lr_alpha']}\" \\\n",
     "                     + f\"_{params['encoder_pool_size']}\" \\\n",
@@ -541,7 +541,7 @@
     "    max_proposition_distance = params['max_proposition_distance']\n",
     "    non_related_max_proportion = params['non_related_max_proportion']\n",
     "\n",
-    "    df_path = Path(params['export_path'], f'data_df_{max_proposition_distance}.pkl')\n",
+    "    df_path = Path(params['export_path'], f'{params[\"language\"]}_data_df_{max_proposition_distance}.pkl')\n",
     "    if df_path.exists():\n",
     "        data_dataframe = pandas.read_pickle(df_path)\n",
     "        print(\"INFO: Data Dataframe Found\")\n",
@@ -2102,16 +2102,19 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "45db824c686f92ff5a2120110a200c79437caa527895339497af8122a932288b"
-  },
   "kernelspec": {
-   "display_name": "Python 3.7.4 64-bit ('base': conda)",
+   "display_name": "Python 3.6.9 64-bit",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
    "name": "python",
-   "version": ""
+   "version": "3.6.9"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
   }
  },
  "nbformat": 4,
