--- a/segmenter/models/segmenter.ipynb
+++ b/segmenter/models/segmenter.ipynb
@@ -136,14 +136,14 @@
     "    'language': LANGUAGE,\n",
     "#     'meta_tags_level': 0, # BIOES \n",
     "    'meta_tags_level': 1, # BIOES-MetaTag\n",
-    "    'words_path': str(Path(DATA_DIR, 'vocab.words.txt')),\n",
-    "    'chars_path': str(Path(DATA_DIR, 'vocab.chars.txt')),\n",
-    "    'tags_path': str(Path(DATA_DIR, 'vocab.tags.txt')),\n",
-    "    'pos_path': str(Path(DATA_DIR, 'vocab.pos.txt')),\n",
-    "    'sequences_path': (str(Path(DATA_DIR, 'train.words.txt')), str(Path(DATA_DIR, 'testa.words.txt')), str(Path(DATA_DIR, 'testb.words.txt'))),\n",
-    "    'labels_path': (str(Path(DATA_DIR, 'train.tags.txt')), str(Path(DATA_DIR, 'testa.tags.txt')), str(Path(DATA_DIR, 'testb.tags.txt'))),\n",
-    "    'pos_labels_path': (str(Path(DATA_DIR, 'train.pos.txt')), str(Path(DATA_DIR, 'testa.pos.txt')), str(Path(DATA_DIR, 'testb.pos.txt'))),\n",
-    "    'char_vectorization_path': str(Path(DATA_DIR, 'char_vectorization.npz')),\n",
+    "    'words_path': str(Path(DATA_DIR, f'{LANGUAGE}_vocab.words.txt')),\n",
+    "    'chars_path': str(Path(DATA_DIR, f'{LANGUAGE}_vocab.chars.txt')),\n",
+    "    'tags_path': str(Path(DATA_DIR, f'{LANGUAGE}_vocab.tags.txt')),\n",
+    "    'pos_path': str(Path(DATA_DIR, f'{LANGUAGE}_vocab.pos.txt')),\n",
+    "    'sequences_path': (str(Path(DATA_DIR, f'{LANGUAGE}_train.words.txt')), str(Path(DATA_DIR, f'{LANGUAGE}_testa.words.txt')), str(Path(DATA_DIR, f'{LANGUAGE}_testb.words.txt'))),\n",
+    "    'labels_path': (str(Path(DATA_DIR, f'{LANGUAGE}_train.tags.txt')), str(Path(DATA_DIR, f'{LANGUAGE}_testa.tags.txt')), str(Path(DATA_DIR, f'{LANGUAGE}_testb.tags.txt'))),\n",
+    "    'pos_labels_path': (str(Path(DATA_DIR, f'{LANGUAGE}_train.pos.txt')), str(Path(DATA_DIR, f'{LANGUAGE}_testa.pos.txt')), str(Path(DATA_DIR, f'{LANGUAGE}_testb.pos.txt'))),\n",
+    "    'char_vectorization_path': str(Path(DATA_DIR, f'{LANGUAGE}_char_vectorization.npz')),\n",
     "    'glove_raw_path': str(Path(GLOVE_DIR)),\n",
     "\n",
     "    # Data info\n",
@@ -153,7 +153,7 @@
     "    'processed_data_path': str(Path(PROCESSED_DATADIR)), # Directory to save the processed data\n",
     "}\n",
     "\n",
-    "MODEL_NAME = params['corpus_type'] + \\\n",
+    "MODEL_NAME = params['language'] + \\\n",
     "    (\"_pos\" if params['with_pos'] else \"\") + \\\n",
     "    \"_model\" + \\\n",
     "    (\"_cnn\" if params['with_cnn'] else \"\") + \\\n",
@@ -173,7 +173,7 @@
     "    'full_model_path': str(Path(DATA_DIR, MODEL_NAME)),\n",
     "    'model_histories_path': str(Path(DATA_DIR, MODEL_NAME)),\n",
     "    'checkpoint_path': str(Path(Path(DATA_DIR, MODEL_NAME, \"checkpoints\"))),\n",
-    "    'glove_path': str(Path(DATA_DIR, 'glove.npz' if not params['standardize'] else f'glove_{params[\"standardize\"]}.npz')),\n",
+    "    'glove_path': str(Path(DATA_DIR, f'glove_{LANGUAGE}.npz' if not params['standardize'] else f'glove_{params[\"standardize\"]}_{LANGUAGE}.npz')),\n",
     "})\n",
     "\n",
     "\n",
@@ -1793,7 +1793,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": ""
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
