--- a/link_prediction/models/link_prediction.ipynb
+++ b/link_prediction/models/link_prediction.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,14 +62,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "spanish_model_0.003_10_0.1_5_False\n"
+     ]
+    }
+   ],
    "source": [
     "# Define model initial params\n",
     "\n",
-    "INFO_TAG = \"persuasive_essays_paragraph_all_linked\"\n",
-    "# INFO_TAG = \"cdcp\"\n",
+    "# INFO_TAG = \"persuasive_essays_paragraph_all_linked\"\n",
+    "INFO_TAG = \"cdcp\"\n",
     "# INFO_TAG = \"abstrct\"\n",
     "\n",
     "DATA_PATH = Path(BASE_PATH, \"data/\")\n",
@@ -199,9 +207,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dev relations 596\n",
+      "dev source argumentative units 274\n",
+      "dev target argumentative units 228\n",
+      "test relations 646\n",
+      "test source argumentative units 290\n",
+      "test target argumentative units 213\n",
+      "train relations 3800\n",
+      "train source argumentative units 1722\n",
+      "train target argumentative units 1416\n",
+      "Vocab size 5561\n",
+      "Relation tags ['evidences', 'evidences_Inverse', 'reasons', 'reasons_Inverse']\n",
+      "Proposition tags ['fact', 'policy', 'reference', 'testimony', 'value']\n",
+      "max_size_prop 95\n",
+      "max_amount_doc 13\n"
+     ]
+    }
+   ],
    "source": [
     "# Load Dataset \n",
     "\n",
@@ -503,9 +532,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO: Data Dataframe Found\n",
+      "15786\n",
+      "dev Counter({'': 596, 'reasons_Inverse': 294, 'reasons': 294, 'evidences': 4, 'evidences_Inverse': 4})\n",
+      "test Counter({'': 644, 'reasons': 296, 'reasons_Inverse': 296, 'evidences': 26, 'evidences_Inverse': 26})\n",
+      "train Counter({'': 3800, 'reasons': 1810, 'reasons_Inverse': 1810, 'evidences': 90, 'evidences_Inverse': 90})\n"
+     ]
+    }
+   ],
    "source": [
     "# Encode Dataset\n",
     "@tf.function\n",
@@ -1130,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1155,9 +1196,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model 0\n",
+      "65/65 [==============================] - 3s 40ms/step - loss: 15.8053 - relation_0_loss: 1.2025 - source_0_loss: 1.1747 - target_0_loss: 1.1087 - relation_0_acc: 0.6134 - relation_0_relation_0F1Macro: 0.3045 - source_0_acc: 0.5140 - source_0_source_0F1Macro: 0.2067 - target_0_acc: 0.5217 - target_0_target_0F1Macro: 0.1972\n",
+      "Model 1\n",
+      "65/65 [==============================] - 3s 39ms/step - loss: 15.6389 - relation_1_loss: 1.1943 - source_1_loss: 1.1668 - target_1_loss: 1.1269 - relation_1_acc: 0.6180 - relation_1_relation_1F1Macro: 0.3026 - source_1_acc: 0.4829 - source_1_source_1F1Macro: 0.1654 - target_1_acc: 0.5023 - target_1_target_1F1Macro: 0.1904\n",
+      "Model 2\n",
+      "65/65 [==============================] - 3s 42ms/step - loss: 15.9995 - relation_2_loss: 1.2299 - source_2_loss: 1.1523 - target_2_loss: 1.1276 - relation_2_acc: 0.6141 - relation_2_relation_2F1Macro: 0.2909 - source_2_acc: 0.5155 - source_2_source_2F1Macro: 0.2096 - target_2_acc: 0.5132 - target_2_target_2F1Macro: 0.2198\n"
+     ]
+    }
+   ],
    "source": [
     "# Evaluate model\n",
     "def evaluate_model(params: dict):\n",
@@ -1171,8 +1225,8 @@
     "        for key in results:\n",
     "            values = np.array(results[key]).tolist()\n",
     "            results[key] = values\n",
-    "        json.dump(results, Path(params['model_path'], f\"test_result_{i}.json\").open(\"w\"))\n",
-    "\n",
+    "#         json.dump(results, Path(params['model_path'], f\"test_result_{i}.json\").open(\"w\"))\n",
+    "#         print(results)\n",
     "\n",
     "evaluate_model(params)"
    ]
@@ -2103,12 +2157,20 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6.9 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.6.9"
   },
   "vscode": {
